# SGI

./: .gitignore  AGENTS.md  DEPLOY_PLAN.md  FIXES_APPLIED.md  Makefile  README.md  checkpoint.md  results.md  skills-lock.json  ui_refactorization.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  debug_test.py  docker-compose.yml  handler.py  pyproject.toml  trigger_handler.py
backend/migrations/: env.py
backend/migrations/versions/: 4e12a2883ac9_baseline.py
backend/questionnaires/: iso14001.json  iso45001.json  iso9001.json  pre_diagnosis.json
backend/scripts/: local_test.sh  test_post_signup_trigger.sh
backend/src/: main.py
backend/src/adapters/auth/: cognito.py  cognito_port.py
backend/src/adapters/db/: company_repository.py  migration.py  process_repository.py  user_repository.py
backend/src/adapters/llm/: anthropic_adapter.py  llm_port.py
backend/src/config/: settings.py
backend/src/domain/entities/: finding.py  plan.py  process.py  user.py
backend/src/domain/repositories/: user_repository.py
backend/src/routes/companies/: routes.py
backend/src/routes/dashboard/: routes.py
backend/src/routes/processes/: routes.py
backend/src/routes/questionnaires/: routes.py
backend/src/trigger/: post_signup_trigger.py
backend/tests/: conftest.py  test_lifespan_resilience.py
backend/tests/integration/: test_repository.py  test_routes.py  test_users.py
backend/tests/unit/: test_anthropic_adapter.py  test_auth.py  test_entities.py  test_handler.py  test_main.py  test_post_signup_trigger.py  test_pre_diagnosis.py  test_routes.py
(+171 files in other folders)
