[project]
name = "sgi-pro-backend"
version = "0.1.0"
description = "SGI Pro Backend API - ISO Management System Certification Tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]",
    "pydantic==2.10.6",
    "pydantic[email]",
    "pydantic-settings",
    "sqlmodel",
    "asyncpg",
    "psycopg[binary]",
    "boto3",
    "python-jose[cryptography]",
    "pyjwt[crypto]",
    "httpx",
    "cachetools",
    "mangum>=0.17.0",
    "anthropic>=0.39.0",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"